--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client Authentication</title>
+    <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css" />
+    <script type="module" src="/dist/index.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/dist/index.js"></script>
   </body>
 </html>
